[package]
name = "solana-tx-signer"
version = "0.1.0"
edition = "2024"
authors = [
    "Thomas Lambertz <thomas.lambertz@neodyme.io>",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/neodyme-labs/solana-tx-signer"

[dependencies]
solana-transaction = "2.2.1"
solana-sdk = "2.2.1"
solana-cli-output = "2.2.1"
solana-rpc-client = "2.2.1"
clap = { version = "4.5.32", features = ["derive"] }
bincode = "1.3.3"
